[package]
name = "hanziscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.53" }
opencc = { version = "0.3.0" }
pinyin = { version = "0.9" }
reqwest = { version = "0.11.9", features = ["blocking"] }
scraper = { version = "0.12.0"}
selectors = { version = "0.23.0" }
